# coding-game-service

./: Makefile.am  Makefile.am.integration.inc  Makefile.am.service.inc  build-flatpak.sh  com.endlessm.Coding.policy.in  com.endlessm.CodingGameService.json.in  com.endlessm.CodingGameService.xml  configure.ac  merge-lessons
data/: timeline.json.unvalidated.in
data/lessons/: chatbox.json.unvalidated.in
debian/: coding-game-service-os-integration.install  control  libcoding-game-service-0-dev.install  rules
files/: coding-terminal.desktop  org.processing.App.desktop
files/wave/: Wave30.pde  WaveRedMouse.pde  wave.pde  wave_red.pde
files/wave_25/: wave_25.pde
files/wave_mouse_interaction/: wave_mouse_interaction.pde
files/wave_red/: wave_red.pde
files/wave_red_mouse/: wave_red_mouse.pde
files/wave_red_white_mouse/: wave_red_white_mouse.pde
lib/: communicator.js  config.js.in  controller.js  desktopFile.js  log.js  service.js  shellAppStore.js  shim.c  shim.h
mocks/: constructors.js
tests/js/: testCodingGameService.js  testCodingGameServiceTimeline.js
